# luke_input_tracker

./: LICENSE  README.md  pubspec.yaml
.cargokit/: build.dart
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  track_mouse.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: Podfile
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: luke_input_tracker.podspec
lib/: luke_input_tracker.dart
lib/src/: core.dart  models.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: permissions.dart  simple.dart  utils.dart
lib/src/rust/api/permissions/: macos_accessibility.dart
linux/: CMakeLists.txt
macos/: luke_input_tracker.podspec
rust/: Cargo.toml  build.rs  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  permissions.rs  simple.rs  utils.rs
windows/: CMakeLists.txt
(+1 files in other folders)
