[package]
name = "luke_input_tracker"
version = "0.1.0"
edition = "2021"
build = "build.rs"  

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rdev = { git = "https://github.com/Narsil/rdev.git#c77b4e5456301cfa7f2226020f2a58f2f8d77c5d", features = ["unstable_grab"] }
core-foundation = "0.10.1"
serde = "1.0.219"
serde_json = "1.0.142"
regex = "1.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
